--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,10 @@
     <div class="w-[100%] h-screen flex">
         <div class="videofeed h-screen flex flex-col bg-zinc-300 w-[70%]">
             <div class="remotefeed bg-blue-200 h-1/2">
-                <video class="w-full h-full object-cover " id="remotestream" autoplay playsinline></video>
+                <video class="w-full h-full object-cover " id="remoteVideo" autoplay playsinline></video>
             </div>
             <div class="localfeed bg-red-200 h-1/2">
-                <video src="w-full h-full object-cover " id="localstream" autoplay muted></video>
+                <video src="w-full h-full object-cover " id="localVideo" autoplay muted></video>
             </div>
         </div>
         <div class="message-box h-full w-full bg-zinc-400 flex flex-col text-2xl relative">
@@ -25,43 +25,147 @@
                 <input type="submit" name="" id="">
             </form>
 
-        </div>  
+        </div>
     </div>
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"
         integrity="sha384-mkQ3/7FUtcGyoppY6bz/PORYoGqOl7/aSUMn2ymDOJcapfS6PHqxhRTMh1RR0Q6+"
         crossorigin="anonymous"></script>
     <script>
-        let localstream = document.querySelector('#localstream');
-        let remotestream = document.querySelector('#remotestream');
-        let peerConnection;
+        
         let roomname;
         const socket = io();
-  
-
-        const setLocalStream = async()=>{
-            try{
-                let stream = await navigator.mediaDevices.getUserMedia({video: true, audio: true});
-                localstream.srcObject = stream;
-            }catch(e){
-                console.error("failed to get media devices");
-            }
-        }
-
         socket.emit('joinroom');
 
         socket.on("joined", function (roomname) {
-                room = roomname;
-                console.log("connection established");
-            })
+            room = roomname;
+            console.log("connection established");
+            initialize();
+        })
 
-        
+        // webrtc logic
 
+        let localStream;
+            let remoteStream;
+            let peerConnection;
+            let inCall = false;
 
-        
+            const rtcSettings = {
+                iceServers: [{ urls: "stun:stun.l.google.com:19302" }],
+            };
 
+            const initialize = async () => {
+                socket.on("signalingMessage", handleSignalingMessage);
 
+                try {
+                    localStream = await navigator.mediaDevices.getUserMedia({
+                        audio: true,
+                        video: true
+                    })
+                    document.querySelector("#localVideo").srcObject = localStream;
+                    // document.querySelector("#localVideo").style.display = "block";
 
+                    initiateOffer();
 
+                    inCall = true;
+                }
+                catch (err) {
+                    console.log("Rejected by browser" + err);
+                }
+            }
+
+            const initiateOffer = async () => {
+                await createPeerConnection();
+                try {
+                    const offer = await peerConnection.createOffer();
+                    await peerConnection.setLocalDescription(offer);
+                    socket.emit("signalingMessage", {
+                        room,
+                        message: JSON.stringify({
+                            type: "offer",
+                            offer
+                        })
+                    })
+                }
+                catch (err) {
+                    console.log("error in creating offer" + err);
+                }
+            }
+
+            const createPeerConnection = () => {
+                peerConnection = new RTCPeerConnection(rtcSettings);
+
+                remoteStream = new MediaStream();
+
+                document.querySelector("#remoteVideo").srcObject = remoteStream;
+                document.querySelector("#remoteVideo").style.display = "block";
+                document.querySelector("#localVideo").classList.add("smallFrame");
+
+                localStream.getTracks().forEach(track => {
+                    peerConnection.addTrack(track, localStream);
+                })
+
+                peerConnection.ontrack = (event) => {
+                    event.streams[0].getTracks().forEach(track => {
+                        remoteStream.addTrack(track);
+                    })
+                }
+
+                peerConnection.onicecandidate = (event) => {
+                    if (event.candidate) {
+                        console.log("Sending Ice Candidates");
+
+                        socket.emit("signalingMessage", {
+                            room,
+                            message: JSON.stringify({
+                                type: "candidate",
+                                candidate: event.candidate
+                            })
+                        })
+                    }
+                }
+
+                peerConnection.onconnectionstatechange = () => {
+                    console.log("connection state change hui ", peerConnection.connectionState);
+                }
+            }
+
+            const handleSignalingMessage = async (message) => {
+                const { type, offer, answer, candidate } = JSON.parse(message);
+                if (type === "offer") handleOffer(offer);
+                if (type === "answer") handleAnswer(answer);
+                if (type === "candidate" && peerConnection) {
+                    try { await peerConnection.addIceCandidate(candidate); }
+                    catch (error) {
+                        console.log(error);
+                    }
+                }
+                if (type === "hangup") {
+                    hangup()
+                }
+            }
+
+            const handleOffer = async (offer) => {
+                await createPeerConnection();
+                try {
+                    await peerConnection.setRemoteDescription(offer);
+                    const answer = await peerConnection.createAnswer();
+                    await peerConnection.setLocalDescription(answer);
+                    socket.emit("signalingMessage", { room, message: JSON.stringify({ type: "answer", answer }) });
+                    inCall = true;
+                }
+                catch (error) {
+                    console.log("failed to handle offer");
+                }
+            }
+
+            const handleAnswer = async (answer) => {
+                try {
+                    await peerConnection.setRemoteDescription(answer);
+                }
+                catch (error) {
+                    console.log("failed to handle answer");
+                }
+            }
     </script>
 </body>
 
