--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,7 +66,7 @@
 
             try {
                 localStream = await navigator.mediaDevices.getUserMedia({
-                    audio: true,
+                    // audio: true,
                     video: true
                 });
                 document.querySelector("#localVideo").srcObject = localStream;
