--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
         </div>
 
         <div class="message-box h-full w-full bg-zinc-400 flex flex-col text-2xl relative">
+            <button id="skip">Skip</button>
             <h1 class="bg-zinc-300 p-4">Chat</h1>
             <div class="messages flex-grow overflow-auto p-4" id="messages"></div>
             <form id="chatForm" class="absolute bottom-5 w-[70%] bg-red-300 flex">
@@ -37,7 +38,7 @@
         const form = document.querySelector("#chatForm");
         const messageInput = document.querySelector("#messageInput");
         const messagesDiv = document.querySelector("#messages");
-
+        const skipbtn = document.querySelector("#skipbtn");
         let roomname;
         const socket = io();
         let dataChannel;
@@ -49,6 +50,7 @@
             console.log("Connection established to room:", roomname);
             initialize();
         });
+
 
         // WebRTC logic
         let localStream;
@@ -64,12 +66,12 @@
             socket.on("signalingMessage", handleSignalingMessage);
 
             try {
+
                 localStream = await navigator.mediaDevices.getUserMedia({
-                    audio: true,
+                    // audio: true,
                     video: true
                 });
                 document.querySelector("#localVideo").srcObject = localStream;
-
                 initiateOffer();
                 inCall = true;
             } catch (err) {
@@ -176,6 +178,8 @@
             messagesDiv.appendChild(messageElement);
             messagesDiv.scrollTop = messagesDiv.scrollHeight;
         };
+
+        
     </script>
 </body>
 
